# tic_tac_toe

./: .gitignore  CMakeLists.txt  install_vcpkg.sh  vcpkg.json
.github/workflows/: pipelines.yml
include/modern/: lib.hpp
src/: CMakeLists.txt  lib.cpp  main.cpp
tic_tac_toe/: CMakeLists.txt  main.cpp
